Cloud_Resources/GATEWAY/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: https-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https-listener-name
    protocol: HTTPS
    port: 443
    #allowedRoutes:
      #kinds:
      #- kind: HTTPRoute
      #namespaces:
        #from: All
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: backend-weje-com
  addresses:
  - type: NamedAddress
    value: load-balancer-india-ip
