Cloud_Resources/GATEWAY/prodLudoHttpRoutes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: prod-ludo-routes
  namespace: prod
spec:
  parentRefs:
  - name: https-gateway
    namespace: default
    sectionName: https-listener-name
  rules:
  - matches:
    - path:
        value: /ludoprod/socket.io
        type: PathPrefix
    backendRefs:
    - name: ludo-server-svc
      port: 9016
  - matches:
    - path:
        value: /LudoServer/checkTableExist/prod/
        type: PathPrefix
    backendRefs:
    - name: ludo-server-svc 
      port: 9016
  - matches:
    - path:
        value: /LudoServer/clearTable/prod/
        type: PathPrefix
    backendRefs:
    - name: ludo-server-svc 
      port: 9016
  - matches:
    - path:
        value: /LudoServer/leaveGame/prod/
        type: PathPrefix
    backendRefs:
    - name: ludo-server-svc 
      port: 9016
  - matches:
    - path:
        value: /LudoServer/checkUserInGame/prod/
        type: PathPrefix
    backendRefs:
    - name: ludo-server-svc 
      port: 9016
