Cloud_Resources/GATEWAY/prodSocialRoutes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: prod-social-routes
  namespace: prod
spec:
  parentRefs:
  - name: https-gateway
    namespace: default
    sectionName: https-listener-name
  rules:
  - matches:
    - path:
        value: /PeopleKnow/prod
        type: PathPrefix
    backendRefs:
    - name: search-users-svc
      port: 9001
  - matches:
    - path:
        value: /SocialLists/prod
        type: Exact
    backendRefs:
    - name: friends-getlist-svc
      port: 9014
  - matches:
    - path:
        value: /FriendRequest/prod
        type: Exact
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: LB-Encrypted
              value: '{client_encrypted}'
    backendRefs:
    - name: friends-module-svc
      port: 9013
  - matches:
    - path:
        value: /RejectFriendRequest/prod
        type: Exact
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: LB-Encrypted
              value: '{client_encrypted}'
    backendRefs:
    - name: friends-module-svc
      port: 9013
  - matches:
    - path:
        value: /AcceptFriend/prod
        type: Exact
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: LB-Encrypted
              value: '{client_encrypted}'
    backendRefs:
    - name: friends-module-svc
      port: 9013
  - matches:
    - path:
        value: /UnfriendApi/prod
        type: Exact
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: LB-Encrypted
              value: '{client_encrypted}'
    backendRefs:
    - name: friends-module-svc
      port: 9017
